# GroundTruthHackathon

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
data/business_info/: info.txt
data/customer_profiles/: customer_john.txt  customer_sarah.txt
models/: __init__.py  auth_schemas.py  schemas.py
modules/: __init__.py  auth.py  llm_handler.py  pii_masker.py  prompts.py  rag_retriever.py
scripts/: index_customer_data.py
static/: index.html  login.html
tests/: run_all_tests.py  test_conversation_memory.py  test_full_integration.py  test_pii_masking.py  test_rag_retrieval.py
