[project]
name = "groundtruthhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "pip>=25.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
